Incorrect computed style in pseudo-elements with display: contents https://bugs.webkit.org/show_bug.cgi?id=179812

Reviewed by Antti Koivisto.

LayoutTests/imported/w3c:

* web-platform-tests/cssom/getComputedStyle-pseudo-expected.txt:
* web-platform-tests/cssom/getComputedStyle-pseudo.html:
  Extended the testcase to cover this bug.

Source/WebCore:

Bug 178513 gave them an anon renderer as the main renderer. Unfortunately, the
style of that box is exposed via getComputedStyle, so that needs to be handled
somehow to return the correct style.

Tests: imported/w3c/web-platform-tests/cssom/getComputedStyle-pseudo.html

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::ComputedStyleExtractor::styledRenderer const):
  Don't return a display: contents pseudo anon box.
* dom/Element.cpp:
(WebCore::Element::hasDisplayContents const):
  Just look at the rare data style.
(WebCore::Element::existingComputedStyle const):
  Look at the rare data first. This also fixes an inefficiency in the
  sense that before then we'd compare the anon box style to the
  pseudo-element style during style update, that may be more changes
  than needed.
* style/RenderTreeUpdaterGeneratedContent.cpp:
(WebCore::RenderTreeUpdater::GeneratedContent::updatePseudoElement):
* style/StyleTreeResolver.cpp:
(WebCore::Style::TreeResolver::resolvePseudoStyle):
  Move the anon box creation to render tree update instead of style
  resolution.


Canonical link: https://commits.webkit.org/195918@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225049 268f45cc-cd09-0410-ab3c-d52691b4dbfc